# render_stl

./: Cargo.toml
mesh/: Cargo.toml
mesh/src/: lib.rs
part_renderer_cli/: Cargo.toml
part_renderer_cli/src/: error.rs  main.rs
ray_tracer/: Cargo.toml
ray_tracer/src/: integrator.rs  lib.rs  ray.rs  test.rs  triangle.rs
ray_tracer/src/camera/: orthographic.rs
ray_tracer/src/film/: mod.rs
ray_tracer/src/filter/: mod.rs
ray_tracer/src/geometry/: mod.rs  point.rs  vector.rs
ray_tracer/src/interaction/: mod.rs  offset.rs
ray_tracer/src/light/: mod.rs  point.rs
ray_tracer/src/sampler/: mod.rs  stratified.rs
ray_tracer/src/simple/: ray_tracer.rs
render_stl/: Cargo.toml
render_stl/src/: builder.rs  config.rs  error.rs  lib.rs
